en/1.45/_sources/reference/conanfile/tools/cmake/cmake_layout.rst.txt
.. _cmake_layout:

cmake_layout
------------

.. warning::

    These tools are **experimental** and subject to breaking changes.


For example, this would implement the standard CMake project layout:

.. code:: python

    from conan.tools.cmake import cmake_layout

    def layout(self):
        cmake_layout(self)


If you want to try it, use the ``conan new hello/0.1 --template=cmake_lib`` template.

It is very important to note that this ``cmake_layout()`` is just calling the ``folders`` and ``cpp``
attributes described in the (:ref:`layout reference <conan_tools_layout>`):


.. code:: python

    def cmake_layout(conanfile, generator=None):
        gen = conanfile.conf["tools.cmake.cmaketoolchain:generator"] or generator
        if gen:
            multi = "Visual" in gen or "Xcode" in gen or "Multi-Config" in gen
        else:
            compiler = conanfile.settings.get_safe("compiler")
            if compiler in ("Visual Studio", "msvc"):
                multi = True
            else:
                multi = False

        conanfile.folders.source = "."
        try:
            build_type = str(conanfile.settings.build_type)
        except ConanException:
            raise ConanException("'build_type' setting not defined, it is necessary for cmake_layout()")
        if multi:
            conanfile.folders.build = "build"
            conanfile.folders.generators = "build/conan"
        else:
            build_type = build_type.lower()
            conanfile.folders.build = "cmake-build-{}".format(build_type)
            conanfile.folders.generators = os.path.join(conanfile.folders.build, "conan")

        conanfile.cpp.source.includedirs = ["src"]
        if multi:
            conanfile.cpp.build.libdirs = ["{}".format(build_type)]
            conanfile.cpp.build.bindirs = ["{}".format(build_type)]
        else:
            conanfile.cpp.build.libdirs = ["."]
            conanfile.cpp.build.bindirs = ["."]


First, it is important to notice that the layout depends on the CMake generator that will be used.
So if defined from ``[conf]``, that value will be used. If defined in recipe, then the recipe should
pass it as ``cmake_layout(self, cmake_generator)``.

The definitions of the folders is different if it is a multi-config generator (like Visual Studio or Xcode),
or a single-config generator (like Unix Makefiles). In the first case, the folder is the same irrespective
of the build type, and the build system will manage the different build types inside that folder. But
single-config generators like Unix Makefiles, must use a different folder for each different configuration
(as a different build_type Release/Debug).

Finally, the location where the libraries are created also depends. For multi-config, the respective libraries
will be located in a dedicated folder inside the build folder, while for single-config, the libraries will
be located directly in the build folder.

This helper defines a few things, for example that the source folder is called ``"."``, meaning that Conan will
expect the sources in the same directory were the conanfile is (most likely the project root).
This could be customized without fully changing the layout: